Fix WP block tools overlap

--- a/src/modules/blocks/event-datetime/style.pcss
+++ b/src/modules/blocks/event-datetime/style.pcss
@@ -16,7 +16,7 @@
 	margin-bottom: 0;
 	margin-top: 0;
 	position: relative;
-	z-index: 90;
+	z-index: 20;
 
 	.button-link {
 		color: #060606;
